prod/wiki/db.yaml
apiVersion: v1
kind: Service
metadata:
  name: wiki-db
  namespace: wiki
spec:
  clusterIP: None
  ports: 
    - protocol: TCP
      port: 3306
  selector:
    app: wiki-db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wiki-db-deployment
  namespace: wiki
spec:
  replicas: 1 # tells deployment to run 1 pod matching the template
  selector:
    matchLabels:
      app: wiki-db
  template: # create pods using pod definition in this template
    metadata:
      labels:
        app: wiki-db
    spec:
      containers:
      - name: mariadb
        image: mariadb:10.3
        ports:
        - containerPort: 3306
        resources:
          requests:
            memory: "1Gi"
            cpu: "0.25"
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: wiki-db-volume
      volumes:
      - name: wiki-db-volume
        azureDisk:
          kind: Managed
          diskName: wikiDBVolume
          diskURI:
