prod/wiki/pdf.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wiki-pdf
  namespace: wiki
spec:
  clusterIP: None
  ports:
    - protocol: TCP
      port: 3000
  selector: 
    app: wiki-pdf
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wiki-pdf-deployment
  namespace: wiki
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wiki-pdf
  template: # create pods using pod definition in this template
    metadata:
      labels:
        app: wiki-pdf
    spec:
      containers:
      - name: render
        image: msokk/electron-render-service:1.0.0
        ports:
        - containerPort: 3000
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 3
          periodSeconds: 3
          timeoutSeconds: 1
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 3
          timeoutSeconds: 3
          failureThreshold: 3
        resources:
          requests:
            memory: "128Mi"
            cpu: "0.1"
          limits:
            memory: "512Mi"
            cpu: "0.5"
