prod/wiki/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wiki-ingress
  namespace: wiki
  annotations:
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/proxy-body-size: 32m
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/server-snippet: |
      add_header X-Frame-Options SAMEORIGIN;
spec:
  tls:
  - hosts:
    - wiki.gccollab.ca
    secretName: wiki-secret
  rules:
  - host: wiki.gccollab.ca
    http:
      paths:
      - path: /
        backend:
          serviceName: wiki
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pdf-ingress
  namespace: wiki
  annotations:
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - pdf.gccollab.ca
    secretName: wiki-pdf-secret
  rules:
  - host: pdf.gccollab.ca
    http:
      paths:
      - path: /
        backend:
          serviceName: wiki-pdf
          servicePort: 3000
